syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.pki;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

import "gogoproto/gogo.proto";
import "pki/certificate.proto";

message NocRootCertificatesByVidAndSkid {
  int32 vid = 1 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
  string subjectKeyId = 2; 
  repeated Certificate certs = 3; 
  float tq = 4; 
  
}

