syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.pki;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

import "zigbeealliance/distributedcomplianceledger/pki/certificate.proto";

message RevokedNocRootCertificates {
  string subject = 1; 
  string subjectKeyId = 2; 
  repeated Certificate certs = 3;
  uint32 schemaVersion = 4;
}
