syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.pki;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

message UniqueCertificate {
  string issuer = 1; 
  string serialNumber = 2; 
  bool present = 3; 
  
}

